--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Build
         working-directory: src
+        env:
+          CI: "" # trick it
         run: msbuild ServiceControl.sln /t:Build /p:Configuration=Release
 
       - name: Docker Build
