--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: nuget/setup-nuget@v1
       - uses: actions/setup-dotnet@v1
       - uses: microsoft/setup-msbuild@v1.1
