--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,11 @@ jobs:
       github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     runs-on: windows-2019
     steps:
-      - name: Check for secrets
-        env:
-          SECRETS_AVAILABLE: ${{ secrets.SECRETS_AVAILABLE }}
-        shell: pwsh
-        run: exit $(If ($env:SECRETS_AVAILABLE -eq 'true') { 0 } Else { 1 })
+      # - name: Check for secrets
+      #   env:
+      #     SECRETS_AVAILABLE: ${{ secrets.SECRETS_AVAILABLE }}
+      #   shell: pwsh
+      #   run: exit $(If ($env:SECRETS_AVAILABLE -eq 'true') { 0 } Else { 1 })
       - name: Checkout
         if: github.event_name != 'pull_request_target'
         uses: actions/checkout@v2.3.4
